<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Minder</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">Minder</string>
    <string name="action_settings">Settings</string>
    <string name="new_reminder">New Reminder</string>
    <string name="set_location">Set Location</string>
    <string name="title_activity_settings">Settings</string>
    <string name="advertising_notice">There is a prize at the end of this wall of text. I would
    really appreciate if you read it.\n
    Minder was the first app I ever made, and if you\'ve used it for awhile you may have noticed.
    It\'s under-going a complete overhaul right now, and at the end it will be a very different app.
    One of those changes is that it is now ad supported. But I know how annoying it is when an app
    updates and becomes worse. Features go away, bloat is added, or there are ads where no ads were
    before.\n
    So for you, my early users, I am offering this deal: Send me an email at
    &lt;a href="mailto:tbridges42@gmail.com"&gt;tbridges42@gmail.com&lt;/a&gt; by June 30, 2017
    and give me your feedback. Let me know what your favorite features are, what you\'d really like to see, and how
    you use the app. In return, I\'ll send you a promo code to get rid of the apps for free. You\'ll
    get all of the new improvements, without having to see the new ads.\n
    Separately, I\'d really appreciate it if you
    &lt;a href="https://play.google.com/store/apps/details?id=us.bridgeses.Minder"&gt;
    gave me a good review on the Play Store.&lt;/a&gt;\n
    Reviewing is not a requirement to get the promo code.</string>

    <!-- Edit Reminder Activity strings -->
    <string name="title_activity_edit">Edit Reminder</string>
    <string name="edit_name">Name</string>
    <string name="name_summary">Give your reminder a name</string>
    <string name="edit_description">Description</string>
    <string name="description_summary">What do you need to be reminded about?</string>
    <string name="edit_confirm">Save</string>
    <string name="edit_delete">Delete</string>
    <string name="edit_cancel">Cancel</string>
    <string name="title_activity_alarm_screen">AlarmScreen</string>
    <string name="title_activity_repeat">Repeat Settings</string>
    <string name="loading">Loading…</string>
    <string name="time_code">"h:mm aa"</string>
    <string name="full_date_code">EEEE, MMMM d, yyyy</string>
    <string name="full_date_time_code">"h:mm aa EEEE, MMMM d, yyyy"</string>
    <string name="delete_title">Delete Reminder</string>
    <string name="delete_message">This Reminder will be deleted</string>
    <string name="invalid_location">A location must be set to use Location Restriction</string>
    <string name="invalid_ssid">A WiFi network must be set to use WiFi Restriction</string>
    <string name="invalid_code">"A code must be set to use Code Restriction"</string>
    <string name="reminder_deleted">Reminder deleted</string>
    <string name="ok">OK</string>
    <string name="code_set">Code set</string>
    <string name="silent">Silent</string>
    <string name="no_camera">No camera detected</string>

    <!-- Repeat Activity strings -->
    <string name="short_sat">S</string>
    <string name="short_mon">M</string>
    <string name="short_tues">T</string>
    <string name="short_wed">W</string>
    <string name="short_thurs">T</string>
    <string name="short_fri">F</string>
    <string name="short_sun">S</string>

    <!-- Map Activity strings -->
    <string name="meters">meters</string>

    <!-- About screen strings -->
    <string name="site_url">http://apps.bridgeses.us/minder</string>
    <string name="support_url">http://support.bridgeses.us</string>
    <string name="email">tbridges42@gmail.com</string>
    <string name="monster_shop">https://www.etsy.com/shop/TravelingMonsterShop</string>
    <string name="mailto">mailto:</string>
    <string name="subject_code">"?subject="</string>
    <string name="feedback_subject">Minder Feedback</string>
    <string name="set_defaults">Set Defaults</string>
    <string name="about">About</string>

    <!-- Alarm Screen strings -->
    <string name="snooze">Snooze</string>
    <string name="dismiss">Dismiss</string>
    <string name="minutes">minutes</string>

    <string name="repeat_none">0</string>
    <string name="repeat_daily">1</string>
    <string name="repeat_weekly">2</string>
    <string name="repeat_monthly">3</string>
    <string name="repeat_yearly">4</string>

    <string name="by_date">0</string>
    <string name="by_day_week">1</string>
    <string name="by_end_month">2</string>
    <string name="by_end_month_weekly">3</string>

    <string name="location_none">0</string>
    <string name="only_at">1</string>
    <string name="only_away">2</string>

    <string-array name="repeat_period">
        <item>None</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string-array name="repeat_index">
        <item>@string/repeat_none</item>
        <item>@string/repeat_daily</item>
        <item>@string/repeat_weekly</item>
        <item>@string/repeat_monthly</item>
        <item>@string/repeat_yearly</item>
    </string-array>

    <string-array name="monthly_type">
        <item>By Date</item>
        <item>By Day of Week</item>
        <item>Count From End of Month</item>
        <item>By Day of Week from End of Month</item>
    </string-array>
    <string-array name="monthly_index">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="location_type">
        <item>None</item>
        <item>Only at location</item>
        <item>Only away from location</item>
    </string-array>
    <string-array name="location_index">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="title_activity_edit_conditions">Edit Conditions</string>
    <string name="title_activity_edit_persistence">Edit Persistence</string>
    <string name="title_activity_wifi">Wifi Activity</string>
    <string name="title_activity_edit_style">Edit Style</string>

    <string name="export">Export Reminders</string>
    <string name="import_string">Import Reminders</string>
    <string name="do_not_display">Do not display again</string>

</resources>
