<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_new"
        android:icon="@drawable/ic_action_new"
        android:title="@string/new_reminder"
        app:showAsAction="always" />
    <item android:id="@+id/action_export"
        android:orderInCategory="80"
        app:showAsAction="never"
        android:title="@string/export" />
    <item android:id="@+id/action_import"
        android:orderInCategory="80"
        app:showAsAction="never"
        android:title="@string/import_string" />
    <!--<item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />-->
    <item android:id="@+id/defaults"
        android:title="@string/set_defaults"
        android:orderInCategory="90"
        app:showAsAction="never" />
</menu>